tests/ui/error-codes/E0262.stderr
error[E0262]: invalid lifetime parameter name: `'static`
  --> $DIR/E0262.rs:1:8
   |
LL | fn foo<'static>(x: &'static str) { }
   |        ^^^^^^^ 'static is a reserved lifetime name

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0262`.
